# elrond-workspace

./: .gitignore  Dockerfile  Readme.md
mycrowdfunding/: Cargo.toml  deploy.json  simulate.json
mycrowdfunding/mandos/: crowdfunding-fund.scen.json  crowdfunding-init.scen.json
mycrowdfunding/tests/: crowdfunding_test.rs  mandos_test.rs
mycrowdfunding/wasm/: Cargo.toml
